[package]
name = "gas-estimation"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
primitive-types = { version = "0.9", features = ["fp-conversion"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.6"
tokio = { version = "1.9", features = ["sync", "time"], optional = true }
tokio-tungstenite = { version = "0.15", features = ["native-tls"], optional = true }
tracing = "0.1"
url = "2.0"
web3 = { git = "https://github.com/tomusdrw/rust-web3.git", rev="2e2d1dfa906aa2dff6312b97d0d5ba804e9c8c6e", default-features = false, optional = true }
http = "0.2.4"

[features]
tokio_ = ["tokio", "tokio-tungstenite"]
web3_ = ["web3", "primitive-types"]

[dev-dependencies]
assert_approx_eq = "1.1"
mockall = "0.9"
serde_json = "1.0"
tokio = { version = "1.9", features = ["macros", "rt", "time"] }
tracing-subscriber = "0.2"
reqwest = { version = "0.11", features = ["json"] }
