[package]
name = "gas-estimation"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
futures = "0.3.30"
primitive-types = { version = "0.12.2", features = ["fp-conversion"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
tokio = { version = "1.9", features = ["sync", "time", "rt"], optional = true }
tracing = "0.1.40"
url = "2.5.0"
web3 = { version = "0.19", default-features = false, optional = true }
http = "1.1.0"

[features]
tokio_ = ["tokio"]
web3_ = ["web3", "primitive-types"]

[dev-dependencies]
assert_approx_eq = "1.1"
mockall = "0.12.1"
serde_json = "1.0"
tokio = { version = "1.9", features = ["macros", "rt", "time"] }
tracing-subscriber = "0.3"
reqwest = { version = "0.12.3", features = ["json"] }
primitive-types = { version = "0.12", features = ["fp-conversion"] }
web3 = "0.19"
